feat(KSTIP-1430): implement endpoints
