# backend/src/main/java/ch/dvbern/stip/api/sozialdienst/service/SozialdienstAdmin.java
@@ -1,0 +1,13 @@
+package ch.dvbern.stip.api.sozialdienst.service;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class SozialdienstAdmin {
+    private String keykloakId;
+    private String vorname;
+    private String nachname;
+    private String email;
+}
