# backend/src/main/java/ch/dvbern/stip/api/sozialdienst/service/SozialdienstAdminMapper.java
@@ -1,16 +1,14 @@
 package ch.dvbern.stip.api.sozialdienst.service;
 
 import ch.dvbern.stip.api.common.service.MappingConfig;
-import ch.dvbern.stip.api.sozialdienst.entity.SozialdienstAdmin;
-import ch.dvbern.stip.generated.dto.*;
+import ch.dvbern.stip.generated.dto.SozialdienstAdminCreateDto;
+import ch.dvbern.stip.generated.dto.SozialdienstAdminDto;
+import ch.dvbern.stip.generated.dto.SozialdienstAdminUpdateDto;
 import org.mapstruct.Mapper;
-import org.mapstruct.MappingTarget;
 
-@Mapper(config = MappingConfig.class)
+@Mapper(config= MappingConfig.class)
 public interface SozialdienstAdminMapper {
-    SozialdienstAdminDto toDto(SozialdienstAdmin admin);
-
-    SozialdienstAdmin toEntity(SozialdienstAdminCreateDto dto);
-
-    SozialdienstAdmin partialUpdate(SozialdienstAdminUpdateDto dto, @MappingTarget SozialdienstAdmin admin);
+    SozialdienstAdmin toSozialdienstAdmin(SozialdienstAdminCreateDto createDto);
+    SozialdienstAdmin toSozialdienstAdmin(SozialdienstAdminUpdateDto updateDto);
+    SozialdienstAdminDto toDto(SozialdienstAdmin sozialdienstAdmin);
 }
